--- a/homepage.html
+++ b/homepage.html
@@ -95,7 +95,7 @@
                 <div class="row">
                     <div class="one-half column">
                         <div class="mainLinkArea">
-                            <span class="mainLink">Make an Appointment</span>
+                            <span class="mainLink">Testing</span>
                         </div>
                     </div>
                     <div class="one-half column">
