cleaned up the appearance of the CSS; still need to go thru and make sure there isn't any redudant code there

--- a/programpage.html
+++ b/programpage.html
@@ -17,7 +17,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <title>General Page</title>
+    <title>Program Title</title>
 </head>
 
 <body>
